fix gaps, main btn and 75 to 76 margin in nav

--- a/css/header.css
+++ b/css/header.css
@@ -1,4 +1,4 @@
-.header {
+a.header {
     border-bottom: 1px solid #e7e9fc;
 }
 
@@ -7,7 +7,7 @@
     align-items: center;
 }
 .nav {
-    margin-left: 75px;
+    margin-left: 76px;
 }
 .nav-list {
     display: flex;
