--- a/css/hero.css
+++ b/css/hero.css
@@ -20,6 +20,7 @@
     font-size: 16px;
     font-weight: 500;
     background-color: #4d5ae5;
+    border: none;
     color: white;
     cursor: pointer;
     line-height: 1.5;
